[TASK] Correct placement of login actions when countdown is visible (refs #1356)

--- a/Resources/Private/Stylesheets/easyvote.less
+++ b/Resources/Private/Stylesheets/easyvote.less
@@ -364,6 +364,12 @@ div.login-actions {
 	}
 }
 
+.loginPanel-countdown {
+	.login-actions {
+		right: 18.677777%;
+	}
+}
+
 table.advantages {
     border: 0;
 	tr:hover td {
